tests/NormalTests/paczka1/small_fuzzy/39651641.err
Error in line 6: xQ2OVAL9MD8 S124 37,1
Error in line 8: srLWGJ A265 43,1
